--- a/My website/Pages/nav/index.html
+++ b/My website/Pages/nav/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="my-website/My website/Styles/other-styles/nav.css
 ">
 	<link rel="stylesheet" href="D:\Hrehaan\Programming\my website\Styles\other-styles\portfolio.css">
-	<link rel="stylesheet" href="D:\Hrehaan\Programming\my website\Styles\pages-styles\nav-pages\about.css">
+	<link rel="stylesheet" href="My website/Styles/pages-styles/nav-pages/about.css">
 	<link rel="stylesheet"
 		href="D:\Hrehaan\Programming\my website\Styles\pages-styles\poortfolio-pages-styles\adventure.css">
 	<link rel="stylesheet"
