--- a/My website/Pages/nav/index.html
+++ b/My website/Pages/nav/index.html
@@ -7,7 +7,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Lato&family=Potta+One&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="My_website/my website/Styles/other-styles/common.css">
-	<link rel="stylesheet" href="my-website/My website/Styles/other-styles/nav.css
+	<link rel="stylesheet" href="My website/Styles/other-styles/nav.css">
 ">
 	<link rel="stylesheet" href="D:\Hrehaan\Programming\my website\Styles\other-styles\portfolio.css">
 	<link rel="stylesheet" href="My website/Styles/pages-styles/nav-pages/about.css">
